--- a/.gitignore
+++ b/.gitignore
@@ -259,5 +259,7 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
-/jupyter-translate/Tutorials
-/jupyter-translate/bing.key
+
+# Local files.
+/Tutorials
+/bing.key
